--- a/expense-control/css/style.css
+++ b/expense-control/css/style.css
@@ -118,3 +118,29 @@ select:focus {
     justify-content: space-between;
     align-items: center;
 }
+
+.btn-excluir{
+    background-color: #ef4444;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 0.85rem;
+    transition: background-color 0.2s;
+}
+
+.entrada {
+    border-left: 4px solid #22c55e;
+    background-color: #f0fdf4;
+    padding: 8px;
+    margin-bottom: 6px;
+}
+
+/* Saída (vermelho) */
+.saida {
+    border-left: 4px solid #ef4444;
+    background-color: #fef2f2;
+    padding: 8px;
+    margin-bottom: 6px;
+}
